examples/test/testpolicy15709.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15709
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key48: value14
      key2: value18
      key33: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value16
          key17: value18
      podSelector:
        matchLabels:
          key49: value22
